# QuintetPoker

./: .gitignore  CHANGELOG.md  README.md  manage.py  pyproject.toml
Assets/Scripts/: Card.cs  GameManager.cs  HandEvaluator.cs
backend/core/: views.py
backend/quintet_poker/: asgi.py  settings.py  urls.py
frontend/: package-lock.json
frontend/src/: App.js  package-lock.json  package.json
frontend/src/components/: LoginForm.js  Settings.js
quintet_poker/: settings.py  urls.py  wsgi.py
src/quintet_poker/: main.py
static/: index.html  settings.html
static/js/: theme.js
