[tool.poetry]
name = "quintet_poker"
version = "0.1.0"
description = "A poker game application using Django"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
psycopg2-binary = "^2.9"
social-auth-app-django = "^5.0"
python-dotenv = "^1.0.1"
django-allauth = "^65.0.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
